front-end/pages/sudoku-page/sudoku.css
* {
    box-sizing: border-box;
    /* include padding and border in total width calculation */
}

#sudoku_Board_Container_id {
    display: grid;
    grid-template-columns: auto auto auto;
    background-color: #4168A9;
    height: 550px;
    width: 550px;
    border: 5px solid #4168A9;
}

.sudoku_Block_class {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 2px;
    margin: 2px;
    background-color: white;
}

#main_Content {
    display: flex;
    justify-content: center;
    align-items: center;
}

.input_Cell {
    width: 100%;
    height: 100%;
    border: 0px;
    padding: 0px;
    margin: 0px;
    display: block;
    text-align: center;
}

body {
    margin: 0;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.blueBox {
    background-color: #D9E8FF;
    width: 95vw;
    height: 95vh;
    border-radius: 10px;

    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

#top_right_icons {
    position: absolute;
    top: 15px;
    right: 15px;

    display: flex;
    flex-direction: column;
}

.icon {
    font-size: 44px;
    cursor: pointer;

    display: flex;
    justify-content: center;
    align-items: center;
}

#left_container {
    display: flex;
    align-items: center;
    gap: 8px;
    margin-bottom: 8px;
}

#pause_b_id {
    font-size: 22px;
    color: #4168A9;
    font-weight: 600;
}

#timer_id {
    font-size: 26px;
    color: #4168A9;
    font-weight: 500;
    letter-spacing: 1px;
}

#sudoku_Board_and_notation_id {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

#notation_Boxes {
    display: flex;
    align-items: center;
    gap: 6px;
    margin-top: 10px;
}

#notation_Boxes button:not(#forfeit_btn) {
    width: 55px;
    height: 55px;
    background-color: #B0CEFF;
    border: 2px solid #4168A9;
    border-radius: 6px;
}

#notation_Boxes button:not(#forfeit_btn).activeNotation {
    background-color: #6980a988;
}

.notationBoxNotation {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: xx-large;
}

.notationBoxCornerNotation {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: stretch;
    padding: 4px;
}

.topText {
    display: flex;
    gap: 4px;
    justify-content: flex-start;
}

.bottomText {
    align-self: flex-end;
}

.notationBoxCenterNotation {
    display: flex;
    justify-content: center;
    align-items: center;
}

.notationBoxColorCell {
    display: flex;
    justify-content: center;
    align-items: center;
}

#color_Cell_Icon_id {
    width: 35px;
    height: 35px;
    background-color: #4168A9;
}

#color_Corner_Icon_id {
    width: 25px;
    height: 15px;
    background-color: #4168A9;
}

#color_Center_Icon_id {
    width: 25px;
    height: 15px;
    background-color: #4168A9;
}

/*
.notationBoxColorCorner {
    display: flex;
    padding: 8px;
}

.notationBoxColorCenter {
    display: flex;
    justify-content: center;
    align-items: center;
}
*/

#forfeit_btn {
    height: 55px;
    padding: 0 14px;
    background-color: #ff6b6b;
    border: none;
    border-radius: 4px;
    font-size: 18px;
    cursor: pointer;
    margin-left: 223px;
}

.locked_Cell {
    display: flex;
    justify-content: center;
    align-items: center;
}

